--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           command: |
             cd sta-terraform
             TAG=0.1.$CIRCLE_BUILD_NUM
-            docker build -t stopthatastronaut/sta-terraform .
+            docker build -t stopthatastronaut/sta-terraform:$TAG .
             if [[ "$CIRCLE_BRANCH" == "main" ]]
             then
               echo $DOCKER_PASSWORD | docker login -u stopthatastronaut --password-stdin
