--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
       - run:
           name: Build the Sizzle CI Image
           command: |
+            # TODO: make this only run when changes are present
             cd sizzle-terraform
             TAG=0.1.$CIRCLE_BUILD_NUM
             docker build -t stopthatastronaut/sizzle-ci:$TAG .
@@ -24,6 +25,7 @@ jobs:
       - run:
           name: Build the sta-terraform image
           command: |
+            # TODO: make this only run when changes are present
             cd sta-terraform
             TAG=0.1.$CIRCLE_BUILD_NUM
             docker build -t stopthatastronaut/sta-terraform:$TAG .
