add openSSH to the STA build image

--- a/sta-terraform/Dockerfile
+++ b/sta-terraform/Dockerfile
@@ -32,6 +32,8 @@ RUN unzip terraform-provider-pingdom_1.1.3_linux_amd64.zip -d ~/.terraform.d/plu
 
 RUN pwsh -command "Install-Module Pester -force -verbose"
 
+RUN apt-get install openssh -y
+
 RUN ls ~/.terraform.d/plugins/linux_amd64/
 
 RUN apt-get clean all
