branch filters (probably not needed) and a bugfix on STA

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,8 +54,14 @@ workflows:
             - DockerHub
           requires:
             - test
+          filters:
+            branches:
+              only: main
       - build-staci:
           context:
             - DockerHub
           requires:
             - test
+          filters:
+            branches:
+              only: main
