--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
             cd sizzle-terraform
             TAG=0.1.$CIRCLE_BUILD_NUM
             docker build -t stopthatastronaut/sizzle-ci:$TAG .
+            docker tag stopthatastronaut/sizzle-ci:$TAG stopthatastronaut/sizzle-ci:latest
             if [[ "$CIRCLE_BRANCH" == "main" ]]
             then
               echo $DOCKER_PASSWORD | docker login -u stopthatastronaut --password-stdin
@@ -37,6 +38,7 @@ jobs:
             cd sta-terraform
             TAG=0.1.$CIRCLE_BUILD_NUM
             docker build -t stopthatastronaut/sta-terraform:$TAG .
+            docker tag stopthatastronaut/sta-terraform:$TAG stopthatastronaut/sizzle-ci:latest
             if [[ "$CIRCLE_BRANCH" == "main" ]]
             then
               echo $DOCKER_PASSWORD | docker login -u stopthatastronaut --password-stdin
