--- a/sta-terraform/alpine-exp/Dockerfile
+++ b/sta-terraform/alpine-exp/Dockerfile
@@ -1,36 +1,8 @@
-FROM ubuntu:18.04
+FROM alpine
 
-RUN apt-get update && apt-get install -y lsb-release
+RUN apk add curl gnupg2 wget software-properties-common
 
-RUN apt-get install curl gnupg2 wget apt-transport-https apt-utils software-properties-common -y
+RUN apk add terraform
 
-RUN curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add - > /dev/null
 
-RUN wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
-
-RUN dpkg -i packages-microsoft-prod.deb
-
-RUN apt-get update
-
-RUN add-apt-repository universe
-
-RUN apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-
-RUN apt-get update && apt-get install terraform=0.14.5
-
-RUN apt-get install powershell unzip -y
-
-RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip &&  ./aws/install
-
-RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
-
-RUN wget -q https://github.com/russellcardullo/terraform-provider-pingdom/releases/download/v1.1.3/terraform-provider-pingdom_1.1.3_linux_amd64.zip
-
-RUN mkdir -p ~/.terraform.d/plugins/linux_amd64/
-
-RUN unzip terraform-provider-pingdom_1.1.3_linux_amd64.zip -d ~/.terraform.d/plugins/linux_amd64/
-
-RUN ls ~/.terraform.d/plugins/linux_amd64/
-
-RUN apt-get clean all
 
