ooooh, yeah, can't do all tags when you've specified a specific tag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
             if [[ "$CIRCLE_BRANCH" == "main" ]]
             then
               echo $DOCKER_PASSWORD | docker login -u stopthatastronaut --password-stdin
-              docker image push --all-tags stopthatastronaut/sizzle-ci:$TAG
+              docker image push --all-tags stopthatastronaut/sizzle-ci
             fi
   build-staci:
     machine: true
@@ -43,7 +43,7 @@ jobs:
             if [[ "$CIRCLE_BRANCH" == "main" ]]
             then
               echo $DOCKER_PASSWORD | docker login -u stopthatastronaut --password-stdin
-              docker image push --all-tags stopthatastronaut/sta-terraform:$TAG
+              docker image push --all-tags stopthatastronaut/sta-terraform
             fi
 
 workflows:
