revert to the old school method

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,13 +22,13 @@ jobs:
             # TODO: make this only run when changes are present
             cd sizzle-terraform
             TAG=0.1.$CIRCLE_BUILD_NUM
-            docker build -t stopthatastronaut/sizzle-ci .
-            docker tag stopthatastronaut/sizzle-ci stopthatastronaut/sizzle-ci:$TAG
-            docker tag stopthatastronaut/sizzle-ci stopthatastronaut/sizzle-ci:latest
+            docker build -t stopthatastronaut/sizzle-ci:$TAG .
+            docker tag stopthatastronaut/sizzle-ci:$TAG stopthatastronaut/sizzle-ci:latest
             if [[ "$CIRCLE_BRANCH" == "main" ]]
             then
               echo $DOCKER_PASSWORD | docker login -u stopthatastronaut --password-stdin
-              docker image push -a stopthatastronaut/sizzle-ci
+              docker image push stopthatastronaut/sizzle-ci:$TAG
+              docker image push stopthatastronaut/sizzle-ci:latest
             fi
   build-staci:
     machine: true
@@ -40,13 +40,13 @@ jobs:
             # TODO: make this only run when changes are present
             cd sta-terraform
             TAG=0.1.$CIRCLE_BUILD_NUM
-            docker build -t stopthatastronaut/sta-terraform .
-            docker tag stopthatastronaut/sta-terraform stopthatastronaut/sta-terraform:$TAG
-            docker tag stopthatastronaut/sta-terraform stopthatastronaut/sta-terraform:latest
+            docker build -t stopthatastronaut/sta-terraform:$TAG .
+            docker tag stopthatastronaut/sta-terraform:$TAG stopthatastronaut/sta-terraform:latest
             if [[ "$CIRCLE_BRANCH" == "main" ]]
             then
               echo $DOCKER_PASSWORD | docker login -u stopthatastronaut --password-stdin
-              docker image push -a stopthatastronaut/sta-terraform
+              docker image push stopthatastronaut/sta-terraform:$TAG
+              docker image push stopthatastronaut/sta-terraform:latest
             fi
 
 workflows:
