--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,42 @@ jobs:
               docker image push stopthatastronaut/sta-terraform:$TAG
               docker image push stopthatastronaut/sta-terraform:latest
             fi
+  build-sizzleterraform:
+    machine: true
+    steps:
+      - checkout
+      - run:
+          name: Build the sizzle-terraform image
+          command: |
+            # TODO: make this only run when changes are present
+            cd sizzle-terraform
+            TAG=0.1.$CIRCLE_BUILD_NUM
+            docker build -t stopthatastronaut/sizzle-terraform:$TAG .
+            docker tag stopthatastronaut/sizzle-terraform:$TAG stopthatastronaut/sizzle-terraform:latest
+            if [[ "$CIRCLE_BRANCH" == "main" ]]
+            then
+              echo $DOCKER_PASSWORD | docker login -u stopthatastronaut --password-stdin
+              docker image push stopthatastronaut/sizzle-terraform:$TAG
+              docker image push stopthatastronaut/sizzle-terraform:latest
+            fi
+  build-pwshdummy:
+    machine: true
+    steps:
+      - checkout
+      - run:
+          name: Build the pwsh dummy pipeline tester image
+          command: |
+            # TODO: make this only run when changes are present
+            cd Pwsh-DummyContainer
+            TAG=0.1.$CIRCLE_BUILD_NUM
+            docker build -t stopthatastronaut/pwshdummycontainer:$TAG .
+            docker tag stopthatastronaut/pwshdummycontainer:$TAG stopthatastronaut/pwshdummycontainer:latest
+            if [[ "$CIRCLE_BRANCH" == "main" ]]
+            then
+              echo $DOCKER_PASSWORD | docker login -u stopthatastronaut --password-stdin
+              docker image push stopthatastronaut/pwshdummycontainer:$TAG
+              docker image push stopthatastronaut/pwshdummycontainer:latest
+            fi
 
 workflows:
   build:
