I suppose it helps if you actually enable them in the pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,3 +101,13 @@ workflows:
             - DockerHub
           requires:
             - test
+      - build-pwshdummy:
+          context:
+            - DockerHub
+          requires:
+            - test
+      - build-sizzleterraform:
+          context:
+            - DockerHub
+          requires:
+            - test
