--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,27 @@ jobs:
               docker image push stopthatastronaut/openscad-tools:latest
             fi
 
+  build-octo:
+    machine:
+      image: ubuntu-2004:202201-02
+    steps:
+      - checkout
+      - run:
+          name: Build the octo image
+          command: |
+            # TODO: make this only run when changes are present
+            # TODO: build without push on branches or PRs
+            cd staocto
+            TAG=0.1.$CIRCLE_BUILD_NUM
+            docker build -t stopthatastronaut/sta-octo:$TAG .
+            docker tag stopthatastronaut/sta-octo:$TAG stopthatastronaut/sta-octo:latest
+            if [[ "$CIRCLE_BRANCH" == "main" ]]
+            then
+              echo $DOCKER_PASSWORD | docker login -u stopthatastronaut --password-stdin
+              docker image push stopthatastronaut/sta-octo:$TAG
+              docker image push stopthatastronaut/sta-octo:latest
+            fi
+
 workflows:
   build:
     jobs:
@@ -84,6 +105,11 @@ workflows:
           requires:
             - test
       - build-staci:
+          context:
+            - DockerHub
+          requires:
+            - test
+      - build-octo:
           context:
             - DockerHub
           requires:
