--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,7 +82,7 @@ jobs:
           command: |
             # TODO: make this only run when changes are present
             # TODO: build without push on branches or PRs
-            cd staocto
+            cd sta-octo
             TAG=0.1.$CIRCLE_BUILD_NUM
             docker build -t stopthatastronaut/sta-octo:$TAG .
             docker tag stopthatastronaut/sta-octo:$TAG stopthatastronaut/sta-octo:latest
